--- a/lwjgl3/build.gradle
+++ b/lwjgl3/build.gradle
@@ -21,10 +21,10 @@ sourceSets.main.resources.srcDirs += [rootProject.file('assets').path]
 mainClassName = 'io.blackdeluxecat.painttd.lwjgl3.Lwjgl3Launcher'
 application.setMainClass(mainClassName)
 eclipse.project.name = appName + '-lwjgl3'
-java.sourceCompatibility = 8
+java.sourceCompatibility = JavaVersion.VERSION_17
 java.targetCompatibility = 8
 if (JavaVersion.current().isJava9Compatible()) {
-    compileJava.options.release.set(8)
+    compileJava.options.release.set(17)
 }
 
 dependencies {
