--- a/lwjgl3/build.gradle
+++ b/lwjgl3/build.gradle
@@ -181,3 +181,7 @@ startScripts.classpath = project.tasks.jar.outputs.files
 if (enableGraalNative == 'true') {
     apply from: file("nativeimage.gradle")
 }
+
+processResources {
+    dependsOn ":core:texturePacker"
+}
